# CS196

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.55c52b2  CS196.sublime-project  CS196.sublime-workspace  Makefile  README.md  SimulatorDescription.txt  SpaceGame.txt  cmake_install.cmake  description_albur.txt  game  game.cbp
src/: block.c  block.h  gravity.c  headers.h  input.c  input.h  main.c  main.h  movement.c  movement.h  physics.h  textures.c  textures.h  world.c  world.h
src/textures/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/textures/docs/: Doxyfile
src/textures/examples/: Makefile
src/textures/examples/Boing.app/Contents/: Info.plist
src/textures/examples/Gears.app/Contents/: Info.plist
src/textures/examples/Gears.app/Contents/MacOS/: Gears
src/textures/examples/Heightmap.app/Contents/MacOS/: Heightmap
src/textures/examples/Simple.app/Contents/: Info.plist
src/textures/examples/Simple.app/Contents/MacOS/: Simple
src/textures/examples/SplitView.app/Contents/: Info.plist
src/textures/examples/Wave.app/Contents/: Info.plist
src/textures/src/: Makefile  cmake_install.cmake  glfw3.pc
src/textures/tests/: Makefile  clipboard  cmake_install.cmake  defaults  gamma  glfwinfo  iconify  modes  peter
src/textures/tests/accuracy.app/Contents/: Info.plist
src/textures/tests/cursoranim.app/Contents/: Info.plist
src/textures/tests/empty.app/Contents/: Info.plist
src/textures/tests/sharing.app/Contents/: Info.plist
src/textures/tests/title.app/Contents/: Info.plist
src/textures/tests/windows.app/Contents/: Info.plist
(+9 files in other folders)
